--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
                     </div>
                     <div class="cta-buttons flex-inline">
                         <a href="#!" class="cta-get-started">Get Started</a>
-                       <a href="#!">
+                        <a href="#!">
                             <div class="cta-watch-video flex-center">
-                                <img src="assets/icon/play.svg" alt="Play video" />
+                                <img
+                                    src="assets/icon/play.svg"
+                                    alt="Play video"
+                                />
                             </div>
-                       </a>
+                        </a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -255,8 +258,60 @@
             </section>
 
             <section class="countdown container">
-                <!-- Content for countdown -->
+                <div class="countdown-list flex-space-between">
+                    <div class="countdown-item">
+                        <p class="number">
+                            <strong>100+</strong>
+                        </p>
+                        <p class="description">Popular Courses</p>
+                    </div>
+                    <div class="countdown-item">
+                        <p class="number">
+                            <strong>500+</strong>
+                        </p>
+                        <p class="description">Skilled Trainer</p>
+                    </div>
+                    <div class="countdown-item">
+                        <p class="number">
+                            <strong>1M+</strong>
+                        </p>
+                        <p class="description">Student Learning</p>
+                    </div>
+                </div>
             </section>
+
+            <section class="testimonials container flex-container">
+                <div class="testimonial-comment">
+                    <img src="assets/icon/block-quote.svg" alt="block-quote">
+                    <blockquote>
+                        “They are the best people. And this is the suitable platform to learn from distance.”
+                    </blockquote>
+                    <p class="testimonial-author">
+                        <strong>Ben Foakes,</strong> student.
+                    </p>
+                    <div class="testimonial-navigation flex-space-between">
+                        <a href="#!" class="navigation-btn flex-center">
+                            <div class="btn-icon">
+                                <img src="assets/icon/prev.svg" alt="prev">
+                            </div>
+                        </a>
+                        <a href="#!" class="navigation-btn flex-center">
+                            <div class="btn-icon">
+                                <img src="assets/icon/next.svg" alt="next">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="testimonial-avatars">
+                    <img src="assets/img/ava-fb-1.jpg" alt="avatar 1" />
+                    <img src="assets/img/ava-fb-2.jpg" alt="avatar 2" />
+                    <img src="assets/img/ava-fb-3.jpg" alt="avatar 3" />
+                    <img src="assets/img/ava-fb-4.jpg" alt="avatar 4" />
+                    <img src="assets/img/ava-fb-5.jpg" alt="avatar 5" />
+                    <img src="assets/img/ava-fb-6.jpg" alt="avatar 6" />
+                </div>
+            </section>
+            
         </main>
     </body>
 </html>
