done còn footer nữa là xong

--- a/index.html
+++ b/index.html
@@ -282,9 +282,10 @@
 
             <section class="testimonials container flex-container">
                 <div class="testimonial-comment">
-                    <img src="assets/icon/block-quote.svg" alt="block-quote">
+                    <img src="assets/icon/block-quote.svg" alt="block-quote" />
                     <blockquote>
-                        “They are the best people. And this is the suitable platform to learn from distance.”
+                        “They are the best people. And this is the suitable
+                        platform to learn from distance.”
                     </blockquote>
                     <p class="testimonial-author">
                         <strong>Ben Foakes,</strong> student.
@@ -292,12 +293,12 @@
                     <div class="testimonial-navigation flex-space-between">
                         <a href="#!" class="navigation-btn flex-center">
                             <div class="btn-icon">
-                                <img src="assets/icon/prev.svg" alt="prev">
+                                <img src="assets/icon/prev.svg" alt="prev" />
                             </div>
                         </a>
                         <a href="#!" class="navigation-btn flex-center">
                             <div class="btn-icon">
-                                <img src="assets/icon/next.svg" alt="next">
+                                <img src="assets/icon/next.svg" alt="next" />
                             </div>
                         </a>
                     </div>
@@ -311,7 +312,20 @@
                     <img src="assets/img/ava-fb-6.jpg" alt="avatar 6" />
                 </div>
             </section>
-            
+
+            <section class="admit flex-center">
+                <div class="admit-content container flex-space-between">
+                    <div class="admit-info">
+                        <p class="admit-heading">Ready to Get Admit</p>
+                        <h1 class="admit-description">
+                            Create your account and Boost your Career.
+                        </h1>
+                    </div>
+                    <div class="admit-cta">
+                        <a href="#!" class="cta-get-started">Get Started</a>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
