--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="assets/css/flexbox.css" />
         <title>Figma-to-html-2</title>
     </head>
-    <body style="height: 10000px">
+    <body>
         <header>
             <div class="container">
                 <div class="header flex-space-between">
@@ -327,5 +327,89 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="footer container">
+                <div class="column">
+                    <a href="#!">
+                        <img src="assets/img/logo.svg" alt="logo">
+                    </a>
+                </div>
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="title">Company</li>
+                        <li class="link-item">
+                            <a href="#">About</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">Careers</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">Press</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="title">Community</li>
+                        <li class="link-item">
+                            <a href="#">Team Plans</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">Blog</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">Students</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">Scholarships</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="title">Teaching</li>
+                        <li class="link-item">
+                            <a href="#">Become a teacher</a>
+                        </li>
+                        <li class="link-item">
+                            <a href="#">Teaching academy</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="column">
+                    <ul class="link-list">
+                        <li class="title">Be social</li>
+                        <li class="link-item">
+                            <img src="assets/icon/twitter.svg" alt="twitter" />
+                            <a href="#">Twitter</a>
+                        </li>
+                        <li class="link-item">
+                            <img src="assets/icon/fb.svg" alt="facebook" />
+                            <a href="#">Facebook</a>
+                        </li>
+                        <li class="link-item">
+                            <img src="assets/icon/insta.svg" alt="instagram" />
+                            <a href="#">Instagram</a>
+                        </li>
+                        <li class="link-item">
+                            <img
+                                src="assets/icon/linkedin.svg"
+                                alt="linkedin"
+                            />
+                            <a href="#">Linkedin</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-copyright">
+                <p class="copyright">
+                    © Copyright 2020 by Mayad Ahmed. All right reserved.
+                </p>
+            </div>
+        </footer>
     </body>
 </html>
